Removing unneeded files.

--- a/src/app/orkinbrown/home/orkinbrown.home.component.html
+++ b/src/app/orkinbrown/home/orkinbrown.home.component.html
@@ -1,11 +1,11 @@
-<div class="page-header" data-parallax="true" style="background-image: url('./assets/img/orkinbrown/home/background-beach.jpg');">
+<div class="page-header" data-parallax="true" style="background-image: url('./assets/img/home/background-beach.jpg');">
     <div class="filter"></div>
     <div class="container">
         <div class="motto text-center">
             <h1>Orkin Brown & Associates Inc.</h1>
             <h3>Registered Auditors & Chartered Accountants (SA)</h3>
             <br />
-            <a href="#ob/contact" class="btn btn-outline-neutral btn-lg btn-round"><i class="fa fa-phone-square"></i>Get in touch</a>
+            <a href="#/contact" class="btn btn-outline-neutral btn-lg btn-round"><i class="fa fa-phone-square"></i>Get in touch</a>
         </div>
     </div>
 </div>
@@ -19,7 +19,7 @@
                 <h5>The practice is registered with the Independent Regulatory Board for Auditors (IRBA). It is also an accredited training office with the South African Institute of Chartered Accountants (SAICA).</h5>
                 <h5>Orkin Brown and Associates performs independent audit, independent reviews as well as compilation reports for a wide range of clients across various industries.</h5>
                 <br>
-                <a href="#ob/about" class="btn btn-info btn-round"><i class="fa fa-info-circle"></i>Learn More</a>
+                <a href="#about" class="btn btn-info btn-round"><i class="fa fa-info-circle"></i>Learn More</a>
             </div>
         </div>
 
@@ -85,7 +85,7 @@
         <br />
         <div class="row">
             <div class="col-md-8 mr-auto ml-auto">
-                <a href="#ob/services" class="btn btn-info btn-round"><i class="fa fa-briefcase"></i>See our services</a>
+                <a href="#services" class="btn btn-info btn-round"><i class="fa fa-briefcase"></i>See our services</a>
             </div>
         </div>
     </div>
@@ -98,7 +98,7 @@
             <div class="col-md-4">
                 <div class="card card-profile card-plain">
                     <div class="card-avatar">
-                        <a href="#avatar"><img src="./assets/img/orkinbrown/home/hilton.jpg" alt="..."></a>
+                        <a href="#avatar"><img src="./assets/img/home/hilton.jpg" alt="..."></a>
                     </div>
                     <div class="card-block">
                         <a href="#paper-kit">
@@ -117,7 +117,7 @@
             <div class="col-md-4">
                 <div class="card card-profile card-plain">
                     <div class="card-avatar">
-                        <a href="#avatar"><img src="./assets/img/orkinbrown/home/tysie.jpg" alt="..."></a>
+                        <a href="#avatar"><img src="./assets/img/home/tysie.jpg" alt="..."></a>
                     </div>
                     <div class="card-block">
                         <a href="#paper-kit">
@@ -136,7 +136,7 @@
             <div class="col-md-4">
                 <div class="card card-profile card-plain">
                     <div class="card-avatar">
-                        <a href="#avatar"><img src="./assets/img/orkinbrown/home/tappy.jpg" alt="..."></a>
+                        <a href="#avatar"><img src="./assets/img/home/tappy.jpg" alt="..."></a>
                     </div>
                     <div class="card-block">
                         <a href="#paper-kit">
@@ -155,7 +155,7 @@
         <br />
         <div class="row">
             <div class="col-md-8 mr-auto ml-auto">
-                <a href="#ob/team" class="btn btn-neutral btn-round"><i class="fa fa-users"></i>Meet the team</a>
+                <a href="#team" class="btn btn-neutral btn-round"><i class="fa fa-users"></i>Meet the team</a>
             </div>
         </div>
     </div>
@@ -168,7 +168,7 @@
                 <h2 class="title">See some testimonials</h2>
                 <h5 class="description">Don't take our word for it. Check out some customer testimonials. We are lekker.</h5>
                 <br>
-                <a href="#ob/testimonials" class="btn btn-info btn-round"><i class="fa fa-comments-o"></i>Testimonials</a>
+                <a href="#testimonials" class="btn btn-info btn-round"><i class="fa fa-comments-o"></i>Testimonials</a>
             </div>
         </div>
     </div>
@@ -182,7 +182,7 @@
                     <h2 class="title">Get in touch</h2>
                     <h5 class="description">Want to get in touch? Contact us via phone, web form, or see our office locations.</h5>
                     <br>
-                    <a href="#ob/contact" class="btn btn-info btn-round"><i class="fa fa-phone-square"></i>Contact us</a>
+                    <a href="#contact" class="btn btn-info btn-round"><i class="fa fa-phone-square"></i>Contact us</a>
                 </div>
             </div>
         </div>
