--- a/src/app/orkinbrown/team/orkinbrown.team.component.html
+++ b/src/app/orkinbrown/team/orkinbrown.team.component.html
@@ -1,4 +1,4 @@
-<div class="page-header" data-parallax="true" style="background-image: url('./assets/img/orkinbrown/team/background-penguins.jpg');">
+<div class="page-header" data-parallax="true" style="background-image: url('./assets/img/team/background-penguins.jpg');">
     <div class="filter"></div>
     <div class="container">
         <div class="motto text-center">
@@ -15,7 +15,7 @@
                 <div class="col-md-4">
                     <div class="card card-profile card-plain">
                         <div class="card-avatar">
-                            <a href="#avatar"><img src="./assets/img/orkinbrown/home/hilton.jpg" alt="..."></a>
+                            <a href="#avatar"><img src="./assets/img/home/hilton.jpg" alt="..."></a>
                         </div>
                         <div class="card-block">
                             <a href="#paper-kit">
@@ -34,7 +34,7 @@
                 <div class="col-md-4">
                     <div class="card card-profile card-plain">
                         <div class="card-avatar">
-                            <a href="#avatar"><img src="./assets/img/orkinbrown/home/tysie.jpg" alt="..."></a>
+                            <a href="#avatar"><img src="./assets/img/home/tysie.jpg" alt="..."></a>
                         </div>
                         <div class="card-block">
                             <a href="#paper-kit">
@@ -53,7 +53,7 @@
                 <div class="col-md-4">
                     <div class="card card-profile card-plain">
                         <div class="card-avatar">
-                            <a href="#avatar"><img src="./assets/img/orkinbrown/home/tappy.jpg" alt="..."></a>
+                            <a href="#avatar"><img src="./assets/img/home/tappy.jpg" alt="..."></a>
                         </div>
                         <div class="card-block">
                             <a href="#paper-kit">
@@ -74,7 +74,7 @@
                 <div class="col-md-4">
                     <div class="card card-profile card-plain">
                         <div class="card-avatar">
-                            <a href="#avatar"><img src="./assets/img/orkinbrown/home/tappy.jpg" alt="..."></a>
+                            <a href="#avatar"><img src="./assets/img/home/tappy.jpg" alt="..."></a>
                         </div>
                         <div class="card-block">
                             <a href="#paper-kit">
@@ -93,7 +93,7 @@
                 <div class="col-md-4">
                     <div class="card card-profile card-plain">
                         <div class="card-avatar">
-                            <a href="#avatar"><img src="./assets/img/orkinbrown/home/hilton.jpg" alt="..."></a>
+                            <a href="#avatar"><img src="./assets/img/home/hilton.jpg" alt="..."></a>
                         </div>
                         <div class="card-block">
                             <a href="#paper-kit">
@@ -112,7 +112,7 @@
                 <div class="col-md-4">
                     <div class="card card-profile card-plain">
                         <div class="card-avatar">
-                            <a href="#avatar"><img src="./assets/img/orkinbrown/home/tysie.jpg" alt="..."></a>
+                            <a href="#avatar"><img src="./assets/img/home/tysie.jpg" alt="..."></a>
                         </div>
                         <div class="card-block">
                             <a href="#paper-kit">
@@ -134,7 +134,7 @@
                 <div class="col-md-4">
                     <div class="card card-profile card-plain">
                         <div class="card-avatar">
-                            <a href="#avatar"><img src="./assets/img/orkinbrown/home/tysie.jpg" alt="..."></a>
+                            <a href="#avatar"><img src="./assets/img/home/tysie.jpg" alt="..."></a>
                         </div>
                         <div class="card-block">
                             <a href="#paper-kit">
@@ -153,7 +153,7 @@
                 <div class="col-md-4">
                     <div class="card card-profile card-plain">
                         <div class="card-avatar">
-                            <a href="#avatar"><img src="./assets/img/orkinbrown/home/tappy.jpg" alt="..."></a>
+                            <a href="#avatar"><img src="./assets/img/home/tappy.jpg" alt="..."></a>
                         </div>
                         <div class="card-block">
                             <a href="#paper-kit">
@@ -172,7 +172,7 @@
                 <div class="col-md-4">
                     <div class="card card-profile card-plain">
                         <div class="card-avatar">
-                            <a href="#avatar"><img src="./assets/img/orkinbrown/home/hilton.jpg" alt="..."></a>
+                            <a href="#avatar"><img src="./assets/img/home/hilton.jpg" alt="..."></a>
                         </div>
                         <div class="card-block">
                             <a href="#paper-kit">
