--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -3,7 +3,7 @@
         <div class="navbar-translate">
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item">
-                    <a [routerLink]="['/ob']"><img src="./assets/img/orkinbrown/nav/logo-white.png" alt="Orkin Brown logo"></a>
+                    <a [routerLink]="['/']"><img src="./assets/img/nav/logo-white.png" alt="Orkin Brown logo"></a>
                 </li>
             </ul>
             <button class="navbar-toggler navbar-burger" type="button" data-toggle="collapse" data-target="#navbarToggler" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation" (click)="sidebarToggle()">
@@ -15,22 +15,22 @@
         <div class="navbar-collapse" id="navbarToggler">
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item">
-                    <a [routerLink]="['/ob/jobs']" class="nav-link" style="color: #f9f871;"><i class="nc-icon nc-alert-circle-i important"></i>We're Hiring</a>
+                    <a [routerLink]="['/jobs']" class="nav-link" style="color: #f9f871;"><i class="nc-icon nc-alert-circle-i important"></i>We're Hiring</a>
                 </li>
                 <li class="nav-item">
-                    <a [routerLink]="['/ob/about']" class="nav-link"><i class="nc-icon nc-circle-10"></i>About Us</a>
+                    <a [routerLink]="['/about']" class="nav-link"><i class="nc-icon nc-circle-10"></i>About Us</a>
                 </li>
                 <li class="nav-item">
-                    <a [routerLink]="['/ob/services']" class="nav-link"><i class="nc-icon nc-ruler-pencil"></i>Services</a>
+                    <a [routerLink]="['/services']" class="nav-link"><i class="nc-icon nc-ruler-pencil"></i>Services</a>
                 </li>
                 <li class="nav-item">
-                    <a [routerLink]="['/ob/team']" class="nav-link"><i class="nc-icon nc-badge"></i>Team</a>
+                    <a [routerLink]="['/team']" class="nav-link"><i class="nc-icon nc-badge"></i>Team</a>
                 </li>
                 <li class="nav-item">
-                    <a [routerLink]="['/ob/testimonials']" class="nav-link"><i class="nc-icon nc-satisfied"></i>Testimonials</a>
+                    <a [routerLink]="['/testimonials']" class="nav-link"><i class="nc-icon nc-satisfied"></i>Testimonials</a>
                 </li>
                 <li class="nav-item">
-                    <a [routerLink]="['/ob/contact']" class="nav-link"><i class="nc-icon nc-email-85"></i>Contact</a>
+                    <a [routerLink]="['/contact']" class="nav-link"><i class="nc-icon nc-email-85"></i>Contact</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" rel="tooltip" title="Follow us on LinkedIn" data-placement="bottom" href="https://www.linkedin.com/company/orkin-brown-and-assoc/" target="_blank">
