--- a/src/assets/sass/paper-kit/_inputs.scss
+++ b/src/assets/sass/paper-kit/_inputs.scss
@@ -153,7 +153,7 @@ textarea.form-control{
   }
   .input-group-prepend .input-group-text{
     margin-right: 0;
-    background: transparent;
+    // background: transparent;
     border: 1px solid #DDDDDD;
     @include transition(300ms, linear);
   }
