--- a/src/app/components/about/orkinbrown.about.component.html
+++ b/src/app/components/about/orkinbrown.about.component.html
@@ -1,12 +1,8 @@
-<div class="page-header" data-parallax="true" style="background-image: url('./assets/img/about/background-tree.jpg');">
+<div class="page-header" data-parallax="true" style="background-image: url('./assets/img/about/background-ripples.jpg');">
     <div class="filter"></div>
     <div class="container">
         <div class="motto text-center">
             <h1>About Us</h1>
-            <!-- <h3>South Africa's premier audit, accounting and tax practice. Plus, a cute dog.</h3> -->
-            <br />
-             <!-- <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" class="btn btn-outline-neutral btn-round"><i class="fa fa-play"></i>Watch video</a>
-            <button type="button" class="btn btn-outline-neutral btn-round">Download</button>  -->
         </div>
     </div>
 </div>
@@ -15,15 +11,32 @@
     <div class="container">
         <div class="row">
             <div class="col-md-8 mr-auto ml-auto">
-                <h2 class="title">A little about us</h2>
-                <h5 class="description">Orkin Brown and Associates is an audit, accounting and tax practice based out of 43 St Margaret Road, Edenvale, Gauteng. The practice is registered with the Independent Regulatory Board for Auditors (IRBA). It is also an accredited training office with the South African Institute of Chartered Accountants (SAICA). Orkin Brown and Associates performs independent audit, independent reviews as well as compilation reports for a wide range of clients across various industries.</h5>
+                <h2 class="title">Our Practice</h2>
+                <h5 class="description">Orkin Brown and Associates performs independent audit, independent reviews as well as compilation reports for a wide range of clients across various industries.</h5>
                 <br>
+                <h5 class="description">We have been in business for over blah years...</h5>
+            </div>
+            <div class="col-md-8 mr-auto ml-auto">
+                <h2 class="title">Our Clients</h2>
                 <h5 class="description">We have been in business for over blah years...</h5>
                 <br>
                 <h5 class="description">Some more stuff...</h5>
                 <br>
                 <h5 class="description">Blah..</h5>
-                <!-- <a href="#paper-kit" class="btn btn-info btn-round">See Details</a> -->
+            </div>
+            <div class="col-md-8 mr-auto ml-auto">
+                <h2 class="title">Our Team</h2>
+                <h5 class="description">Hilton Orkin and Grant Brown </h5>
+                <br>
+                <h5 class="description">Blah..</h5>
+            </div>
+            <div class="col-md-8 mr-auto ml-auto">
+                <h2 class="title">Another section</h2>
+                <h5 class="description">We have been in business for over blah years...</h5>
+                <br>
+                <h5 class="description">Some more stuff...</h5>
+                <br>
+                <h5 class="description">Blah..</h5>
             </div>
         </div>
 
