--- a/src/app/components/home/orkinbrown.home.component.html
+++ b/src/app/components/home/orkinbrown.home.component.html
@@ -10,7 +10,7 @@
     </div>
 </div>
 <div class="main">
-    <div class="section section-gray text-center">
+    <div class="section text-center">
     <div class="container">
         <div class="row">
             <div class="col-md-8 mr-auto ml-auto">
@@ -30,39 +30,18 @@
     <div class="container">
         <div class="row">
             <div class="col-md-8 mr-auto ml-auto">
-                <h2 class="title">What we do</h2>
+                <h2 class="title">Services</h2>
                 <h5 class="description">Orkin Brown and Associates offer a range of services for our clients.</h5>
                 <br>
             </div>
         </div>
         <br/><br/>
         <div class="row">
-            <div class="col-md-3">
+            
+            <div class="col-md-4 mb-50 mb-md-100">
                 <div class="info">
                     <div class="icon icon-info">
-                        <i class="nc-icon nc-album-2"></i>
-                    </div>
-                    <div class="description">
-                        <h4 class="info-title">Accounting</h4>
-                        <p class="description">A small blurb to do with accounting.</p>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-3">
-                <div class="info">
-                    <div class="icon icon-info">
-                        <i class="nc-icon nc-bulb-63"></i>
-                    </div>
-                    <div class="description">
-                        <h4 class="info-title">Taxation</h4>
-                        <p class="description">A small blurb to do with taxation.</p>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-3">
-                <div class="info">
-                    <div class="icon icon-info">
-                        <i class="nc-icon nc-chart-bar-32"></i>
+                        <i class="nc-icon nc-single-copy-04"></i>
                     </div>
                     <div class="description">
                         <h4 class="info-title">Auditing</h4>
@@ -70,14 +49,58 @@
                     </div>
                 </div>
             </div>
-            <div class="col-md-3">
+            <div class="col-md-4 mb-10 mb-md-10">
                 <div class="info">
                     <div class="icon icon-info">
-                        <i class="nc-icon nc-sun-fog-29"></i>
+                        <i class="nc-icon nc-chart-bar-32"></i>
+                    </div>
+                    <div class="description">
+                        <h4 class="info-title">Accounting</h4>
+                        <p class="description">A small blurb to do with accounting.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4 mb-10 mb-md-10">
+                <div class="info">
+                    <div class="icon icon-info">
+                        <i class="nc-icon nc-chart-pie-36"></i>
+                    </div>
+                    <div class="description">
+                        <h4 class="info-title">Tax</h4>
+                        <p class="description">A small blurb to do with taxation.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4 mb-10 mb-md-10">
+                <div class="info">
+                    <div class="icon icon-info">
+                        <i class="nc-icon nc-single-02"></i>
                     </div>
                     <div class="description">
                         <h4 class="info-title">Advisory</h4>
                         <p class="description">A small blurb to do with advisory.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4 mb-10 mb-md-10">
+                <div class="info">
+                    <div class="icon icon-info">
+                        <i class="nc-icon nc-glasses-2"></i>
+                    </div>
+                    <div class="description">
+                        <h4 class="info-title">Reviews</h4>
+                        <p class="description">A small blurb to do with reviews.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4 mb-10 mb-md-10">
+                <div class="info">
+                    <div class="icon icon-info">
+                        <i class="nc-icon nc-money-coins"></i>
+                    </div>
+                    <div class="description">
+                        <h4 class="info-title">Payroll</h4>
+                        <p class="description">A small blurb to do with payroll services.</p>
                     </div>
                 </div>
             </div>
@@ -95,7 +118,7 @@
     <div class="container">
         <h2 class="title">Meet our partners</h2>
         <div class="row">
-            <div class="col-md-4">
+            <div class="col-md-6">
                 <div class="card card-profile card-plain">
                     <div class="card-avatar">
                         <a href="#avatar"><img src="./assets/img/home/hilton.jpg" alt="..."></a>
@@ -114,10 +137,10 @@
                 </div>
             </div>
 
-            <div class="col-md-4">
+            <!-- <div class="col-md-4">
                 <div class="card card-profile card-plain">
                     <div class="card-avatar">
-                        <a href="#avatar"><img src="./assets/img/home/tysie.jpg" alt="..."></a>
+                        <a href="#avatar"><img src="./assets/img/home/" alt="..."></a>
                     </div>
                     <div class="card-block">
                         <a href="#paper-kit">
@@ -131,12 +154,12 @@
                         </p>
                     </div>
                 </div>
-            </div>
+            </div> -->
 
-            <div class="col-md-4">
+            <div class="col-md-6">
                 <div class="card card-profile card-plain">
                     <div class="card-avatar">
-                        <a href="#avatar"><img src="./assets/img/home/tappy.jpg" alt="..."></a>
+                        <a href="#avatar"><img src="./assets/img/home/tysie.jpg" alt="..."></a>
                     </div>
                     <div class="card-block">
                         <a href="#paper-kit">
@@ -152,12 +175,12 @@
                 </div>
             </div>
         </div>
-        <br />
-        <div class="row">
+        <!-- <br /> -->
+        <!-- <div class="row">
             <div class="col-md-8 mr-auto ml-auto">
                 <a href="#team" class="btn btn-neutral btn-round"><i class="fa fa-users"></i>Meet the team</a>
             </div>
-        </div>
+        </div> -->
     </div>
 </div>
 
