--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -23,9 +23,9 @@
                 <li class="nav-item">
                     <a [routerLink]="['/services']" class="nav-link"><i class="nc-icon nc-ruler-pencil"></i>Services</a>
                 </li>
-                <li class="nav-item">
+                <!-- <li class="nav-item">
                     <a [routerLink]="['/team']" class="nav-link"><i class="nc-icon nc-badge"></i>Team</a>
-                </li>
+                </li> -->
                 <li class="nav-item">
                     <a [routerLink]="['/testimonials']" class="nav-link"><i class="nc-icon nc-satisfied"></i>Testimonials</a>
                 </li>
