Content + some styling updates.

--- a/src/app/components/home/orkinbrown.home.component.html
+++ b/src/app/components/home/orkinbrown.home.component.html
@@ -37,8 +37,8 @@
         </div>
         <br/><br/>
         <div class="row">
-            
-            <div class="col-md-4 mb-50 mb-md-100">
+
+            <div class="col-md-4">
                 <div class="info">
                     <div class="icon icon-info">
                         <i class="nc-icon nc-single-copy-04"></i>
@@ -49,7 +49,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-md-4 mb-10 mb-md-10">
+            <div class="col-md-4">
                 <div class="info">
                     <div class="icon icon-info">
                         <i class="nc-icon nc-chart-bar-32"></i>
@@ -60,7 +60,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-md-4 mb-10 mb-md-10">
+            <div class="col-md-4">
                 <div class="info">
                     <div class="icon icon-info">
                         <i class="nc-icon nc-chart-pie-36"></i>
@@ -71,7 +71,10 @@
                     </div>
                 </div>
             </div>
-            <div class="col-md-4 mb-10 mb-md-10">
+        </div>
+
+        <div class="row" style="margin-top: 30px;">
+            <div class="col-md-4">
                 <div class="info">
                     <div class="icon icon-info">
                         <i class="nc-icon nc-single-02"></i>
@@ -82,7 +85,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-md-4 mb-10 mb-md-10">
+            <div class="col-md-4">
                 <div class="info">
                     <div class="icon icon-info">
                         <i class="nc-icon nc-glasses-2"></i>
@@ -93,7 +96,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-md-4 mb-10 mb-md-10">
+            <div class="col-md-4">
                 <div class="info">
                     <div class="icon icon-info">
                         <i class="nc-icon nc-money-coins"></i>
@@ -105,8 +108,9 @@
                 </div>
             </div>
         </div>
+
         <br />
-        <div class="row">
+        <div class="row" style="margin-top: 30px;">
             <div class="col-md-8 mr-auto ml-auto">
                 <a href="#services" class="btn btn-info btn-round"><i class="fa fa-briefcase"></i>See our services</a>
             </div>
