--- a/src/app/components/jobs/orkinbrown.jobs.component.html
+++ b/src/app/components/jobs/orkinbrown.jobs.component.html
@@ -2,7 +2,7 @@
     <div class="filter"></div>
     <div class="container">
         <div class="motto text-center">
-            <h1>Positions Available</h1>
+            <h1>Careers</h1>
             <br />
         </div>
     </div>
@@ -13,7 +13,8 @@
             <div class="row">
                 <div class="col-md-8 mr-auto ml-auto">
                     <h2 class="title">We're currently hiring for the following positions</h2>
-                    <h5>Applications will be made via email.</h5>
+                    <h5>Applications will be made via email. Clicking 'Apply Now' will open up your email application with a pre-populated application template.</h5>
+                    <br>
                     <h5><b>Please remember to attach your resume before sending.</b></h5>
                 </div>
             </div>
