--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -15,7 +15,7 @@
         <div class="navbar-collapse" id="navbarToggler">
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item">
-                    <a [routerLink]="['/jobs']" class="nav-link" style="color: #f9f871;"><i class="nc-icon nc-alert-circle-i important"></i>We're Hiring</a>
+                    <a [routerLink]="['/careers']" class="nav-link" style="color: #f9f871;"><i class="nc-icon nc-alert-circle-i important"></i>We're Hiring</a>
                 </li>
                 <li class="nav-item">
                     <a [routerLink]="['/about']" class="nav-link"><i class="nc-icon nc-circle-10"></i>About Us</a>
