--- a/src/app/components/about/orkinbrown.about.component.html
+++ b/src/app/components/about/orkinbrown.about.component.html
@@ -7,38 +7,48 @@
     </div>
 </div>
 <div class="main">
+
     <div class="section text-center">
-    <div class="container">
-        <div class="row">
-            <div class="col-md-8 mr-auto ml-auto">
-                <h2 class="title">Our Practice</h2>
-                <h5 class="description">Orkin Brown and Associates performs independent audit, independent reviews as well as compilation reports for a wide range of clients across various industries.</h5>
-                <br>
-                <h5 class="description">We have been in business for over blah years...</h5>
-            </div>
-            <div class="col-md-8 mr-auto ml-auto">
-                <h2 class="title">Our Clients</h2>
-                <h5 class="description">We have been in business for over blah years...</h5>
-                <br>
-                <h5 class="description">Some more stuff...</h5>
-                <br>
-                <h5 class="description">Blah..</h5>
-            </div>
-            <div class="col-md-8 mr-auto ml-auto">
-                <h2 class="title">Our Team</h2>
-                <h5 class="description">Hilton Orkin and Grant Brown </h5>
-                <br>
-                <h5 class="description">Blah..</h5>
-            </div>
-            <div class="col-md-8 mr-auto ml-auto">
-                <h2 class="title">Another section</h2>
-                <h5 class="description">We have been in business for over blah years...</h5>
-                <br>
-                <h5 class="description">Some more stuff...</h5>
-                <br>
-                <h5 class="description">Blah..</h5>
+        <div class="container">
+            <div class="row">
+                <div class="col-md-8 mr-auto ml-auto">
+                    <h2 class="title">Our Practice</h2>
+                    <h5 class="description">Orkin Brown and Associates performs independent audit, independent reviews as well as compilation reports for a wide range of clients across various industries.</h5>
+                    <br>
+                    <h5 class="description">The practice is registered with the Independent Regulatory Board for Auditors (IRBA).</h5>
+                    <br>
+                    <h5 class="description">We have been in business for over 20 years.</h5>
+                </div>
             </div>
         </div>
-
     </div>
+
+    <div class="section section-gray text-center">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-8 mr-auto ml-auto">
+                    <h2 class="title">Our Clients</h2>
+                    <h5 class="description">Our clients span a breadth of industries, and we are pleased to provide each and every one with the same professional, above-and-beyond service.</h5>
+                    <br>
+                    <h5 class="description">Our <a href="#services"><u>Services</u></a> page has a rundown of what we can offer your business, at the highest level of quality and trust.</h5>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="section text-center">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-8 mr-auto ml-auto">
+                    <h2 class="title">Our Team</h2>
+                    <h5 class="description">Our partners, Hilton Orkin and Grant Brown, lead a team of over 30 employees with a wealth and variety of experience.</h5>
+                    <br>
+                    <h5 class="description">Our practice is an accredited training office with the South African Institute of Chartered Accountants (SAICA). We take great pride in bringing aboard graduates and training them up across all practice streams, providing them with opportunities to thrive and excel.</h5>
+                    <br>
+                    <h5 class="description">If you wish to join our team, <a href="#careers"><u>we are hiring!</u></a></h5>
+                </div>
+            </div>
+        </div>
+    </div>
+
 </div>
