--- a/src/app/components/contact/orkinbrown.contact.component.html
+++ b/src/app/components/contact/orkinbrown.contact.component.html
@@ -13,7 +13,7 @@
             <div class="row">
                 <div class="col-md-8 mr-auto ml-auto">
                     <h2 class="text-center">Get in touch</h2>
-                    <h4 class="text-center description">Phone: 011 453 4001</h4>
+                    <h4 class="text-center description">Gauteng Office Phone: 011 453 4001</h4>
                     <form [formGroup]="contactForm" class="contact-form"  (ngSubmit)="onSubmit()">
                         <div class="row">
                             <div class="col-md-12">
@@ -73,7 +73,16 @@
             <div class="row">
                 <div class="col-md-8 mr-auto ml-auto">
                     <h2 class="title">Offices</h2>
-                    <h5 class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. </h5>
+                </div>
+                <div class="col-md-8 mr-auto ml-auto">
+                    <iframe src="https://snazzymaps.com/embed/548628" width="90%" height="300px" style="border:none;"></iframe>
+                </div>
+                <div class="col-md-4 mr-auto ml-auto text-left">
+                    <h5 class="description">Our head office is located out of 43 St Margaret Road, Edenvale, Gauteng, Johannesburg.</h5>
+                    <h5 class="description">Office Phone: 011 453 4001</h5>
+                    <br/>
+                    <h5 class="description">We also have a presence in Sydney, Australia.</h5>
+                    <h5 class="description">Office Phone: ?</h5>
                 </div>
             </div>
             <br/><br/>
