Content for services, other updates.

--- a/src/app/components/contact/orkinbrown.contact.component.html
+++ b/src/app/components/contact/orkinbrown.contact.component.html
@@ -13,7 +13,8 @@
             <div class="row">
                 <div class="col-md-8 mr-auto ml-auto">
                     <h2 class="text-center">Get in touch</h2>
-                    <h4 class="text-center description">Gauteng Office Phone: 011 453 4001</h4>
+                    <h4 class="text-center description">Johannesburg Office Phone: +27 11 453 4001</h4>
+                    <h4 class="text-center description">Sydney Office Phone: +61 414 405 502</h4>
                     <form [formGroup]="contactForm" class="contact-form"  (ngSubmit)="onSubmit()">
                         <div class="row">
                             <div class="col-md-12">
@@ -79,10 +80,16 @@
                 </div>
                 <div class="col-md-4 mr-auto ml-auto text-left">
                     <h5 class="description">Our head office is located out of 43 St Margaret Road, Edenvale, Gauteng, Johannesburg.</h5>
-                    <h5 class="description">Office Phone: 011 453 4001</h5>
+                    <h5 class="description">Phone: +27 11 453 4001</h5>
+                    <h5 class="description">Email:</h5>
+                    <h5 class="description"><b><a href="mailto:hilton@orkinbrown.co.za?subject=Hi!">hilton@orkinbrown.co.za</a></b></h5>
+                    <h5 class="description"><b><a href="mailto:grant@orkinbrown.co.za?subject=Hi!">grant@orkinbrown.co.za</a></b></h5>
                     <br/>
                     <h5 class="description">We also have a presence in Sydney, Australia.</h5>
-                    <h5 class="description">Office Phone: ?</h5>
+                    <h5 class="description">Phone: +61 414 405 502</h5>
+                    <h5 class="description">Email:</h5>
+                    <h5 class="description"><b><a href="mailto:hilton@orkinbrown.co.za?subject=Hi!">hilton@orkinbrown.co.za</a></b></h5>
+                    <h5 class="description"><b><a href="mailto:chloe@orkinbrown.co.za?subject=Hi!">chloe@orkinbrown.co.za</a></b></h5>
                 </div>
             </div>
             <br/><br/>
