--- a/src/app/components/services/orkinbrown.services.component.html
+++ b/src/app/components/services/orkinbrown.services.component.html
@@ -13,11 +13,14 @@
             <div class="row">
                 <div class="col-md-8 mr-auto ml-auto">
                     <h2 class="title">Auditing</h2>
-                    <h5 class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. </h5>
+                    <h5 class="description">We provide comprehensive auditing services include meticulous financial statement audits, internal control evaluations, and risk assessment reviews, ensuring clients' financial processes are robust and compliant.</h5>
                     <ul class="description">
-                        <li>List item 1</li>
-                        <li>List item 2</li>
-                        <li>List item 3</li>
+                        <li>Financial Statement Audits</li>
+                        <li>Internal Control Evaluations</li>
+                        <li>Risk Assessment Reviews</li>
+                        <li>Forensic Audits</li>
+                        <li>Compliance Audits</li>
+                        <li>Financial Consulting</li>
                     </ul>
                 </div>
             </div>
@@ -29,11 +32,13 @@
             <div class="row">
                 <div class="col-md-8 mr-auto ml-auto">
                     <h2 class="title">Accounting</h2>
-                    <h5 class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. </h5>
+                    <h5 class="description">Our expertise encompasses fundamental services such as bookkeeping, payroll management, and tax preparation, ensuring meticulous financial records and compliance. Additionally, the practice provides strategic financial planning, forensic accounting, and business advisory services, offering clients a holistic approach to financial management and growth.</h5>
                     <ul class="description">
-                        <li>List item 1</li>
-                        <li>List item 2</li>
-                        <li>List item 3</li>
+                        <li>Bookkeeping and Financial Record Maintenance</li>
+                        <li>Tax Preparation and Planning</li>
+                        <li>Forensic Accounting</li>
+                        <li>Business Advisory Services</li>
+                        <li>Strategic Financial Planning</li>
                     </ul>
                 </div>
             </div>
@@ -45,11 +50,14 @@
             <div class="row">
                 <div class="col-md-8 mr-auto ml-auto">
                     <h2 class="title">Tax</h2>
-                    <h5 class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. </h5>
+                    <h5 class="description">Our tax services include precise tax planning, compliance, and preparation, ensuring clients optimize their tax positions while remaining fully compliant with regulations. We also specialize in tax advisory services, helping clients navigate complex tax implications and strategize for long-term financial success. </h5>
                     <ul class="description">
-                        <li>List item 1</li>
-                        <li>List item 2</li>
-                        <li>List item 3</li>
+                        <li>Tax Planning and Strategy</li>
+                        <li>Tax Compliance and Preparation</li>
+                        <li>Tax Advisory Services for Individuals and Businesses</li>
+                        <li>SARS Representation and Issue Resolution</li>
+                        <li>Estate and Gift Tax Planning</li>
+                        <li>International Tax Planning and Compliance</li>
                     </ul>
                 </div>
             </div>
@@ -61,11 +69,13 @@
             <div class="row">
                 <div class="col-md-8 mr-auto ml-auto">
                     <h2 class="title">Advisory</h2>
-                    <h5 class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. </h5>
+                    <h5 class="description">We offer strategic business planning, financial analysis, and risk management services, tailoring solutions to the unique challenges faced by our clients. Specific advisory services include business restructuring, investment analysis, and market expansion strategies, showcasing the our commitment to fostering sustainable growth for their clients.</h5>
                     <ul class="description">
-                        <li>List item 1</li>
-                        <li>List item 2</li>
-                        <li>List item 3</li>
+                        <li>Strategic Business Planning</li>
+                        <li>Financial Analysis and Reporting</li>
+                        <li>Risk Management Strategies</li>
+                        <li>Business Restructuring and Optimization</li>
+                        <li>Investment Analysis and Advisory</li>
                     </ul>
                 </div>
             </div>
@@ -77,11 +87,13 @@
             <div class="row">
                 <div class="col-md-8 mr-auto ml-auto">
                     <h2 class="title">Reviews</h2>
-                    <h5 class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. </h5>
+                    <h5 class="description">Our practice delivers comprehensive review services designed to enhance financial transparency and decision-making for our clients. Our meticulous review services encompass financial statement reviews, internal control assessments, and risk evaluations, providing valuable insights to ensure accuracy and compliance. </h5>
                     <ul class="description">
-                        <li>List item 1</li>
-                        <li>List item 2</li>
-                        <li>List item 3</li>
+                        <li>Financial Statement Reviews</li>
+                        <li>Internal Control Assessments</li>
+                        <li>Risk Evaluations</li>
+                        <li>Compliance Reviews</li>
+                        <li>Operational and Process Reviews</li>
                     </ul>
                 </div>
             </div>
@@ -93,16 +105,18 @@
             <div class="row">
                 <div class="col-md-8 mr-auto ml-auto">
                     <h2 class="title">Payroll</h2>
-                    <h5 class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. </h5>
+                    <h5 class="description">We provide comprehensive payroll services to streamline and optimize the payroll processes for businesses. Our expert payroll services include accurate salary calculations, compliance with local tax regulations, and efficient payroll administration, ensuring clients meet all legal obligations while focusing on their core operations. </h5>
                     <ul class="description">
-                        <li>List item 1</li>
-                        <li>List item 2</li>
-                        <li>List item 3</li>
+                        <li>Accurate Salary Calculations</li>
+                        <li>Compliance with Local Tax Regulations</li>
+                        <li>Efficient Payroll Administration</li>
+                        <li>Customized Payroll Solutions</li>
+                        <li>Benefits Administration</li>
                     </ul>
                 </div>
             </div>
         </div>
     </div>
-
+    
 </div>
 
