--- a/src/app/components/home/orkinbrown.home.component.html
+++ b/src/app/components/home/orkinbrown.home.component.html
@@ -193,7 +193,7 @@
         <div class="row">
             <div class="col-md-8 mr-auto ml-auto">
                 <h2 class="title">See some testimonials</h2>
-                <h5 class="description">Don't take our word for it. Check out some customer testimonials. We are lekker.</h5>
+                <h5 class="description">Don't take our word for it. See some of our customer testimonials.</h5>
                 <br>
                 <a href="#testimonials" class="btn btn-info btn-round"><i class="fa fa-comments-o"></i>Testimonials</a>
             </div>
