--- a/src/app/components/contact/orkinbrown.contact.component.html
+++ b/src/app/components/contact/orkinbrown.contact.component.html
@@ -82,14 +82,14 @@
                     <h5 class="description">Our head office is located out of 43 St Margaret Road, Edenvale, Gauteng, Johannesburg.</h5>
                     <h5 class="description">Phone: +27 11 453 4001</h5>
                     <h5 class="description">Email:</h5>
-                    <h5 class="description"><b><a href="mailto:hilton@orkinbrown.co.za?subject=Hi!">hilton@orkinbrown.co.za</a></b></h5>
-                    <h5 class="description"><b><a href="mailto:grant@orkinbrown.co.za?subject=Hi!">grant@orkinbrown.co.za</a></b></h5>
+                    <h5 class="description"><b><a href="mailto:hilton@orkinbrown.co.za?subject=Hi!">hilton&#64;orkinbrown.co.za</a></b></h5>
+                    <h5 class="description"><b><a href="mailto:grant@orkinbrown.co.za?subject=Hi!">grant&#64;orkinbrown.co.za</a></b></h5>
                     <br/>
                     <h5 class="description">We also have a presence in Sydney, Australia.</h5>
                     <h5 class="description">Phone: +61 414 405 502</h5>
                     <h5 class="description">Email:</h5>
-                    <h5 class="description"><b><a href="mailto:hilton@orkinbrown.co.za?subject=Hi!">hilton@orkinbrown.co.za</a></b></h5>
-                    <h5 class="description"><b><a href="mailto:chloe@orkinbrown.co.za?subject=Hi!">chloe@orkinbrown.co.za</a></b></h5>
+                    <h5 class="description"><b><a href="mailto:hilton@orkinbrown.co.za?subject=Hi!">hilton&#64;orkinbrown.co.za</a></b></h5>
+                    <h5 class="description"><b><a href="mailto:chloe@orkinbrown.co.za?subject=Hi!">chloe&#64;orkinbrown.co.za</a></b></h5>
                 </div>
             </div>
             <br/><br/>
