--- a/src/app/components/home/orkinbrown.home.component.html
+++ b/src/app/components/home/orkinbrown.home.component.html
@@ -188,7 +188,7 @@
     </div>
 </div>
 
-<div class="section section-gray text-center">
+<!-- <div class="section section-gray text-center">
     <div class="container">
         <div class="row">
             <div class="col-md-8 mr-auto ml-auto">
@@ -199,10 +199,10 @@
             </div>
         </div>
     </div>
-</div>
+</div> -->
 
 <div>
-    <div class="section landing-section text-center">
+    <div class="section section-gray text-center">
         <div class="container">
             <div class="row">
                 <div class="col-md-8 mr-auto ml-auto">
