--- a/src/app/components/jobs/orkinbrown.jobs.component.html
+++ b/src/app/components/jobs/orkinbrown.jobs.component.html
@@ -1,8 +1,8 @@
-<div class="page-header" data-parallax="true" style="background-image: url('./assets/img/jobs/background-jobs.jpg');">
+<div class="page-header" data-parallax="true" style="background-image: url('./assets/img/jobs/background-jobs-penguin.png');">
     <div class="filter"></div>
     <div class="container">
         <div class="motto text-center">
-            <h1>Careers</h1>
+            <h1>Positions</h1>
             <br />
         </div>
     </div>
