--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -15,9 +15,6 @@
         <div class="navbar-collapse" id="navbarToggler">
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item">
-                    <a [routerLink]="['/careers']" class="nav-link" style="color: #f9f871;"><i class="nc-icon nc-alert-circle-i important"></i>We're Hiring</a>
-                </li>
-                <li class="nav-item">
                     <a [routerLink]="['/about']" class="nav-link"><i class="nc-icon nc-circle-10"></i>About Us</a>
                 </li>
                 <li class="nav-item">
@@ -27,8 +24,11 @@
                     <a [routerLink]="['/team']" class="nav-link"><i class="nc-icon nc-badge"></i>Team</a>
                 </li> -->
                 <li class="nav-item">
-                    <a [routerLink]="['/testimonials']" class="nav-link"><i class="nc-icon nc-satisfied"></i>Testimonials</a>
+                    <a [routerLink]="['/positions']" class="nav-link"><i class="nc-icon nc-alert-circle-i"></i>Positions</a>
                 </li>
+                <!-- <li class="nav-item">
+                    <a [routerLink]="['/testimonials']" class="nav-link"><i class="nc-icon nc-satisfied"></i>Testimonials</a>
+                </li> -->
                 <li class="nav-item">
                     <a [routerLink]="['/contact']" class="nav-link"><i class="nc-icon nc-email-85"></i>Contact</a>
                 </li>
