--- a/src/app/components/contact/orkinbrown.contact.component.html
+++ b/src/app/components/contact/orkinbrown.contact.component.html
@@ -1,4 +1,4 @@
-<div class="page-header" data-parallax="true" style="background-image: url('./assets/img/contact/background-pebble-stack.jpg');">
+<div class="page-header" data-parallax="true" style="background-image: url('./assets/img/contact/background-tiny-pebbles.png');">
     <div class="filter"></div>
     <div class="container">
         <div class="motto text-center">
@@ -76,20 +76,24 @@
                     <h2 class="title">Offices</h2>
                 </div>
                 <div class="col-md-8 mr-auto ml-auto">
-                    <iframe src="https://snazzymaps.com/embed/548628" width="90%" height="300px" style="border:none;"></iframe>
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m17!1m12!1m3!1d114602.32225070744!2d28.09598491861004!3d-26.153622161916605!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m2!1m1!2zMjbCsDA5JzEzLjEiUyAyOMKwMDknNTkuMSJF!5e0!3m2!1sen!2sau!4v1713264217616!5m2!1sen!2sau" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                 </div>
                 <div class="col-md-4 mr-auto ml-auto text-left">
-                    <h5 class="description">Our head office is located out of 43 St Margaret Road, Edenvale, Gauteng, Johannesburg.</h5>
-                    <h5 class="description">Phone: +27 11 453 4001</h5>
-                    <h5 class="description">Email:</h5>
-                    <h5 class="description"><b><a href="mailto:hilton@orkinbrown.co.za?subject=Hi!">hilton&#64;orkinbrown.co.za</a></b></h5>
-                    <h5 class="description"><b><a href="mailto:grant@orkinbrown.co.za?subject=Hi!">grant&#64;orkinbrown.co.za</a></b></h5>
+                    <h5 class="description">Johannesburg office:</h5>
+                    <h5 class="description">43 St Margaret Road</h5>
+                    <h5 class="description">Edenvale, Gauteng</h5>
+                    <h5 class="description">Johannesburg</h5>
+                    <br>
+                    <!-- <h5 class="description">Our head office is located out of 43 St Margaret Road, Edenvale, Gauteng, Johannesburg.</h5> -->
+                    <h5 class="description">P: +27 11 453 4001</h5>
+                    <h5 class="description">E: <b><a href="mailto:hilton@orkinbrown.co.za?subject=Hi!">hilton&#64;orkinbrown.co.za</a></b></h5>
+                    <h5 class="description">E: <b><a href="mailto:grant@orkinbrown.co.za?subject=Hi!">grant&#64;orkinbrown.co.za</a></b></h5>
                     <br/>
-                    <h5 class="description">We also have a presence in Sydney, Australia.</h5>
-                    <h5 class="description">Phone: +61 414 405 502</h5>
-                    <h5 class="description">Email:</h5>
-                    <h5 class="description"><b><a href="mailto:hilton@orkinbrown.co.za?subject=Hi!">hilton&#64;orkinbrown.co.za</a></b></h5>
-                    <h5 class="description"><b><a href="mailto:chloe@orkinbrown.co.za?subject=Hi!">chloe&#64;orkinbrown.co.za</a></b></h5>
+                    <!-- <h5 class="description">We also have a presence in Sydney, Australia.</h5> -->
+                    <h5 class="description">Sydney office:</h5>
+                    <h5 class="description">P: +61 414 405 502</h5>
+                    <h5 class="description">E: <b><a href="mailto:hilton@orkinbrown.co.za?subject=Hi!">hilton&#64;orkinbrown.co.za</a></b></h5>
+                    <h5 class="description">E: <b><a href="mailto:chloe@orkinbrown.co.za?subject=Hi!">chloe&#64;orkinbrown.co.za</a></b></h5>
                 </div>
             </div>
             <br/><br/>
