--- a/src/app/components/home/orkinbrown.home.component.html
+++ b/src/app/components/home/orkinbrown.home.component.html
@@ -2,7 +2,7 @@
     <div class="filter"></div>
     <div class="container">
         <div class="motto text-center">
-            <h1>Orkin Brown & Associates Inc.</h1>
+            <h1>Orkin Brown & Associates</h1>
             <h3>Registered Auditors & Chartered Accountants (SA)</h3>
             <br />
             <a href="#/contact" class="btn btn-outline-neutral btn-lg btn-round"><i class="fa fa-phone-square"></i>Get in touch</a>
@@ -45,7 +45,7 @@
                     </div>
                     <div class="description">
                         <h4 class="info-title">Auditing</h4>
-                        <p class="description">A small blurb to do with auditing.</p>
+                        <!-- <p class="description">A small blurb to do with auditing.</p> -->
                     </div>
                 </div>
             </div>
@@ -56,7 +56,7 @@
                     </div>
                     <div class="description">
                         <h4 class="info-title">Accounting</h4>
-                        <p class="description">A small blurb to do with accounting.</p>
+                        <!-- <p class="description">A small blurb to do with accounting.</p> -->
                     </div>
                 </div>
             </div>
@@ -67,7 +67,7 @@
                     </div>
                     <div class="description">
                         <h4 class="info-title">Tax</h4>
-                        <p class="description">A small blurb to do with taxation.</p>
+                        <!-- <p class="description">A small blurb to do with taxation.</p> -->
                     </div>
                 </div>
             </div>
@@ -81,7 +81,7 @@
                     </div>
                     <div class="description">
                         <h4 class="info-title">Advisory</h4>
-                        <p class="description">A small blurb to do with advisory.</p>
+                        <!-- <p class="description">A small blurb to do with advisory.</p> -->
                     </div>
                 </div>
             </div>
@@ -92,7 +92,7 @@
                     </div>
                     <div class="description">
                         <h4 class="info-title">Reviews</h4>
-                        <p class="description">A small blurb to do with reviews.</p>
+                        <!-- <p class="description">A small blurb to do with reviews.</p> -->
                     </div>
                 </div>
             </div>
@@ -103,7 +103,7 @@
                     </div>
                     <div class="description">
                         <h4 class="info-title">Payroll</h4>
-                        <p class="description">A small blurb to do with payroll services.</p>
+                        <!-- <p class="description">A small blurb to do with payroll services.</p> -->
                     </div>
                 </div>
             </div>
@@ -135,7 +135,8 @@
                             </div>
                         </a>
                         <p class="card-description text-center">
-                        Lil' H.
+                        Chartered Accountant (SA) <br>
+                        H.Dip Tax Law
                         </p>
                     </div>
                 </div>
@@ -168,12 +169,12 @@
                     <div class="card-block">
                         <a href="#paper-kit">
                             <div class="author">
-                                <h4 class="card-title">Grant Brown</h4>
+                                <h4 class="card-title">Tyson Orkin</h4>
                                 <h6 class="card-category">Partner</h6>
                             </div>
                         </a>
                         <p class="card-description text-center">
-                        Howdy, partner!
+                        Dawg
                         </p>
                     </div>
                 </div>
