--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -15,22 +15,22 @@
         <div class="navbar-collapse" id="navbarToggler">
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item">
-                    <a [routerLink]="['/about']" class="nav-link"><i class="nc-icon nc-circle-10"></i>About Us</a>
+                    <a [routerLink]="['/about']" class="nav-link"><i class="nc-icon nc-circle-10"></i> About Us</a>
                 </li>
                 <li class="nav-item">
-                    <a [routerLink]="['/services']" class="nav-link"><i class="nc-icon nc-ruler-pencil"></i>Services</a>
+                    <a [routerLink]="['/services']" class="nav-link"><i class="nc-icon nc-ruler-pencil"></i> Services</a>
                 </li>
                 <!-- <li class="nav-item">
                     <a [routerLink]="['/team']" class="nav-link"><i class="nc-icon nc-badge"></i>Team</a>
                 </li> -->
                 <li class="nav-item">
-                    <a [routerLink]="['/positions']" class="nav-link"><i class="nc-icon nc-alert-circle-i"></i>Positions</a>
+                    <a [routerLink]="['/careers']" class="nav-link"><i class="nc-icon nc-alert-circle-i"></i> Careers</a>
                 </li>
                 <!-- <li class="nav-item">
                     <a [routerLink]="['/testimonials']" class="nav-link"><i class="nc-icon nc-satisfied"></i>Testimonials</a>
                 </li> -->
                 <li class="nav-item">
-                    <a [routerLink]="['/contact']" class="nav-link"><i class="nc-icon nc-email-85"></i>Contact</a>
+                    <a [routerLink]="['/contact']" class="nav-link"><i class="nc-icon nc-email-85"></i> Contact</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" rel="tooltip" title="Follow us on LinkedIn" data-placement="bottom" href="https://www.linkedin.com/company/orkin-brown-and-assoc/" target="_blank">
