--- a/src/assets/sass/paper-kit/_navbars.scss
+++ b/src/assets/sass/paper-kit/_navbars.scss
@@ -12,7 +12,7 @@
     font-size: $font-size-base;
     transition: all 0.4s;
     -webkit-transition: all 0.4s;
-    padding: 0;
+    // padding: 0;
     background: $white-color;
     box-shadow: 0 6px 10px -4px rgba(0, 0, 0, 0.15);
 
@@ -26,7 +26,7 @@
     }
     .nav-link{
         i{
-            font-size: 16px;
+            font-size: 20px;
             position: relative;
             top: 4px;
             right: 3px;
@@ -53,9 +53,9 @@
             margin: $navbar-margin-a;
             padding: $navbar-padding-a;
             opacity: .8;
-            font-size: $font-size-small;
+            font-size: $font-size-navbar;
             text-transform: uppercase;
-            font-weight: 600;
+            font-weight: 550;
             color: $default-color;
          }
         .nav-item .nav-link.btn{
