--- a/src/assets/sass/paper-kit/_variables.scss
+++ b/src/assets/sass/paper-kit/_variables.scss
@@ -134,6 +134,7 @@ $height-base:                  40px !default;
 
 $font-size-base:               14px !default;
 $font-size-small:              12px !default;
+$font-size-navbar:             14px !default;
 $font-size-medium:             16px !default;
 $font-size-large:              20px !default;
 $font-size-large-navbar:       22px !default;
